UI: Board & Card Sizev2

--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -199,6 +199,21 @@ weight:900;font-size:12px}
   display: block !important;
 }
 
+/* Bigger green table */
+.table{
+  height: 720px;
+}
+
+/* Bigger cards in hands */
+.card{
+  width: 78px;
+  height: 112px;
+}
+
+.card img.cardImg{
+  width: 78px;
+}
+
 </style>
 </head>
 <body>
