--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -214,6 +214,11 @@ weight:900;font-size:12px}
   width: 78px;
 }
 
+#status,
+#score {
+  display: none;
+}
+
 </style>
 </head>
 <body>
@@ -229,8 +234,7 @@ weight:900;font-size:12px}
 <span id="mpRoomLabel" style="font-weight:700;opacity:.8"></span>
       <input id="mpCode" class="input mono" placeholder="ROOM" style="width:110px;min-width:110px" />
       <button class="btn" id="mpJoin">Join</button>
-      <button class="btn" id="mpPublish">Publish State (Host)</button>
-
+    
       <span class="pill">Seat</span>
       <select id="mpSeatSel" class="input" style="min-width:120px">
         <option value="p1">P1</option>
