UI: Drop/Hide Extra Bars v3

--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -214,10 +214,7 @@ weight:900;font-size:12px}
   width: 78px;
 }
 
-#status,
-#score {
-  display: none;
-}
+#status, #score { display:none; }
 
 </style>
 </head>
