UI: Drop/Hide Extra Bars v4

--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -216,6 +216,13 @@ weight:900;font-size:12px}
 
 #status, #score { display:none; }
 
+/* Hide dev / debug UI */
+#mpPublish,
+#status,
+#score {
+  display: none !important;
+}
+
 </style>
 </head>
 <body>
