UI: Drop/Hide Extra Bars v5

--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -358,12 +358,12 @@ weight:900;font-size:12px}
 </div>
 
 <div class="dash">
-  <div class="panel">
+ <div class="panel" style="display:none">
     <h2>Status</h2>
     <pre id="status" class="mono"></pre>
   </div>
   <div class="panel">
-    <h2>Score</h2>
+<div class="panel" style="display:none">
     <pre id="score" class="mono"></pre>
   </div>
   <div class="panel">
