--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -191,7 +191,10 @@
     <div class="hr"></div>
 
     <div id="actions"></div>
-
+<div class="panel" style="margin-top:12px">
+  <h2>Log</h2>
+  <div id="log" class="log"></div>
+</div>
     <div class="hr"></div>
 
     <h2>Invariant Checker</h2>
@@ -272,7 +275,7 @@
   </div>
 </div>
 
-<div class="dash">
+<div class="dash" style="display:none">
  <div class="panel" style="display:none">
     <h2>Status</h2>
     <pre id="status" class="mono"></pre>
@@ -281,11 +284,6 @@
 <div class="panel" style="display:none">
     <pre id="score" class="mono"></pre>
   </div>
-  <div class="panel">
-    <h2>Log</h2>
-    <div id="log" class="log"></div>
-  </div>
-</div>
 
 <script>
 /* =========================================================
