--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -143,48 +143,86 @@
    MOBILE FRIENDLY (v1)
    ========================= */
 @media (max-width: 900px){
+
+  /* Layout */
   .wrap{
     grid-template-columns: 1fr;
+    gap: 10px;
   }
 
-  /* Let the table fit phones better */
-   .table{
-    height: 380px;          /* was ~520 */
+  /* Panels + headings (smaller / tighter) */
+  .panel{
+    padding: 8px;
+    border-radius: 12px;
+  }
+  .hr{ margin: 6px 0; }
+  h2{
+    margin: 0 0 4px;
+    font-size: 14px;
+  }
+  .muted{
+    font-size: 12px;
+  }
+
+  /* Buttons / inputs (smaller but still tappable) */
+  .btn{
+    padding: 10px 12px;
+    font-size: 13px;
+    border-radius: 12px;
+  }
+  .input{
+    padding: 10px 10px;
+    font-size: 13px;
+    border-radius: 12px;
+    min-width: 120px;
+  }
+
+  /* Log + invariants (reduce footprint) */
+  .log{
+    max-height: 140px;
+    font-size: 12px;
+    line-height: 1.25;
+  }
+  .warnBox{
+    max-height: 120px;
+    padding: 8px;
+    font-size: 11px;
+  }
+  .warnItem{
+    padding: 4px 6px;
+    margin: 4px 0;
+  }
+
+  /* Score + Last Trick (tighter) */
+  #scoreBanner{
+    margin-bottom: 8px;
+    padding: 8px 10px;
+  }
+  #lastTrickBox{
+    margin-bottom: 8px;
+    padding: 8px 10px;
+    font-size: 13px;
+  }
+
+  /* Board */
+  .table{
+    height: 380px;          /* you already tuned this */
     border-radius: 16px;
   }
 
-  #lastTrickBox .cardImg{
-    width: 46px;
-    height: auto;
-  }
-
-  .panel{ padding: 10px; }
-  .hr{ margin: 8px 0; }
-  h2{ margin: 0 0 6px; }
-
-  #scoreBanner{ margin-bottom: 8px; padding: 8px 10px; }
-  #lastTrickBox{ margin-bottom: 8px; padding: 8px 10px; }
-
-  .hand{ margin-top: 6px; min-height: 86px; }
-  .log{ max-height: 180px; }
-
-  /* Reduce seat width so left/right fit */
+  /* Seats */
   .seat{
     width: 44vw;
   }
 
-  /* Slightly tighter spacing */
-  .panel{
-    padding: 10px;
-  }
-  .btn{
-    padding: 12px 14px;
-  }
-  .input{
-    padding: 12px 12px;
+  /* Hands */
+  .hand{
+    margin-top: 6px;
+    min-height: 86px;
+    gap: 5px;
   }
 
-  /* Scale hand cards */
+  /* Hand cards */
   .card{
     width: 54px;
     height: 78px;
@@ -194,16 +232,18 @@
     height: auto !important;
   }
 
-  /* Center played cards a bit smaller on phones */
+  /* Center played cards */
   .playSlot .mini .cardImg{
-    width: 100px;   /* was ~120+ */
+    width: 100px;
+    height: auto;
+  }
+
+  /* Last trick cards */
+  #lastTrickBox .cardImg{
+    width: 46px;
     height: auto;
   }
 }
-
-</style>
-</head>
-<body>
 
 <!-- MULTIPLAYER BAR -->
 <div class="mpBar">
