--- a/public/pepper_mp.html
+++ b/public/pepper_mp.html
@@ -145,6 +145,13 @@
   display: none !important;
 }
 
+/* Desktop baseline sizes (guardrail) */
+.table{ height: 720px; }
+.card{ width: 78px; height: 112px; }
+.card img.cardImg{ width: 78px !important; height: auto !important; }
+.playSlot .mini .cardImg{ width: 140px; height: auto; }
+#lastTrickBox .cardImg{ width: 64px; height: auto; }
+
 /* =========================
    MOBILE FRIENDLY (v1)
    ========================= */
